<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
  	android:layout_height="match_parent"
  	android:layout_width="match_parent">

	<LinearLayout 
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical" >

        <TextView
            android:id="@+id/enableTitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_title" />

        <ToggleButton
            android:id="@+id/enableButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/fontSizeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fontsize_title" />

        <Spinner
            android:id="@+id/fontSizeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/fontsize"
            android:prompt="@string/fontsize_prompt" />

        <TextView
            android:id="@+id/fontColorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fontcolor_title" />

        <Spinner
            android:id="@+id/fontColorSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/fontcolor"
            android:prompt="@string/fontcolor_prompt" />

        <TextView
            android:id="@+id/logContentLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logcontent_title" />

        <TableLayout
            android:id="@+id/logContentCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1,2" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                    <CheckBox
                    	android:id="@+id/dateCheckbox"
                    	android:layout_width="wrap_content"
                    	android:layout_height="wrap_content"
                    	android:text="@string/dateCheckbox_Label" />
                
                	<CheckBox
                    	android:id="@+id/timeCheckbox"
                    	android:layout_width="wrap_content"
                    	android:layout_height="wrap_content"
                    	android:text="@string/timeCheckbox_Label" />

                	<CheckBox
                    	android:id="@+id/pidCheckbox"
                    	android:layout_width="wrap_content"
                    	android:layout_height="wrap_content"
                    	android:text="@string/pidCheckbox_Label" />

            </TableRow>
            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                    <CheckBox
                        android:id="@+id/priorityCheckbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/priorityCheckbox_Label" />	
                
                	<CheckBox
                    	android:id="@+id/tagCheckbox"
                    	android:layout_width="wrap_content"
                    	android:layout_height="wrap_content"
                   		android:text="@string/tagCheckbox_Label" />
                	
                	<CheckBox
                        android:id="@+id/logCheckbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/logCheckbox_Label" />
                	
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/grepLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grep_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ToggleButton
                android:id="@+id/grepEnableButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <EditText
                android:id="@+id/grepEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:maxLines="1"
                android:inputType="text"                
                android:ems="10"
                android:width="0dip" >
            </EditText>

        </LinearLayout>

        <TextView
            android:id="@+id/logLinesLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vertical_size_title" />

        <SeekBar
            android:id="@+id/logLinesSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/horizontalSizeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horizontal_size_title" />

        <SeekBar
            android:id="@+id/horizontalSizeSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/verticalOffsetLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vertical_offset_title" />

        <SeekBar
            android:id="@+id/verticalOffsetSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/horizontalOffsetLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horizontal_offset_title" />

        <SeekBar
            android:id="@+id/horizontalOffsetSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/opacityTitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opacity_title" />

        <SeekBar
            android:id="@+id/opacitySlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
